# hydra-kedro_pipeline

./: README.md  pyproject.toml
ml-pipeline/: README.md  main.py  pyproject.toml
ml-pipeline/conf/: config.yaml
ml-pipeline/conf/base/: parameters.yaml
ml-pipeline/multirun/2024-11-23/23-34-29/: multirun.yaml
ml-pipeline/outputs/2024-11-23/23-34-54/.hydra/: hydra.yaml
ml-pipeline/src/ml-pipeline/pipelines/data_science/: pipeline.py
test/: README.md  main.py  pyproject.toml
test/conf/features/: default.yaml
test/conf/hparams/: default.yaml
test/multirun/2024-11-23/22-25-17/: multirun.yaml
test/multirun/2024-11-23/22-25-40/: multirun.yaml
test/multirun/2024-11-23/22-25-40/0/.hydra/: hydra.yaml  overrides.yaml
test/multirun/2024-11-23/22-25-40/1/.hydra/: config.yaml  hydra.yaml  overrides.yaml
test/multirun/2024-11-23/22-25-40/2/.hydra/: hydra.yaml
test/multirun/2024-11-23/22-37-25/0/.hydra/: config.yaml  hydra.yaml
test/multirun/2024-11-23/22-37-25/1/.hydra/: hydra.yaml
test/multirun/2024-11-23/22-37-25/2/.hydra/: config.yaml  hydra.yaml  overrides.yaml
test/multirun/2024-11-23/23-08-27/: multirun.yaml
test/multirun/2024-11-23/23-08-27/0/.hydra/: hydra.yaml  overrides.yaml
test/multirun/2024-11-23/23-08-27/1/.hydra/: config.yaml  hydra.yaml  overrides.yaml
test/multirun/2024-11-23/23-08-27/2/.hydra/: hydra.yaml  overrides.yaml
test/multirun/2024-11-23/23-08-27/3/.hydra/: config.yaml  hydra.yaml  overrides.yaml
test/src/test/: __main__.py  settings.py
test/src/test/pipelines/data_science/: nodes.py
(+5 files in other folders)
