[project]
name = "ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flatten-dict>=0.4.2",
    "hydra-core>=1.3.2",
    "kedro-viz>=10.1.0",
    "kedro[all]>=0.19.9",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.5.2",
]
